--- a/body.css
+++ b/body.css
@@ -1,4 +1,5 @@
 /* Options panel */
+
 .wrapperOptions
 {
   display: grid;
@@ -109,6 +110,7 @@
   font-weight: bold;
   bottom: 8px;
   left:2px;
+  z-index: 1;
 }
 
 /* Scrollbar stile */
@@ -153,4 +155,7 @@
   height: 230px;
 }
 
-.wallpaper.grid wa
+.wallpaper.grid img:hover
+{
+  cursor: pointer;
+}
