--- a/header.css
+++ b/header.css
@@ -28,16 +28,29 @@ img
 
 .header
 {
-  background-color: #0D1F2D;
+  height: 55px;
 }
 
 /*Wrapper for header via grid */
 .wrapper
 {
+  z-index: 2;
+  position: fixed;
+  width: 100%;
   height: 55px;
   display: grid;
   grid-template-columns: 60% 30% 10%;
   align-items: center;
+}
+.background
+{
+  z-index: 2;
+  background-color: rgba(13, 31, 45, .92);
+  -webkit-backdrop-filter: blur(0.5em);
+  backdrop-filter: blur(.5em);
+  width: 100%;
+  height: 55px;
+  position: fixed;
 }
 
 /* Logo bar */
