--- a/body.css
+++ b/body.css
@@ -150,7 +150,7 @@
 {
    position:fixed;
    visibility:hidden;
-   bottom:50px;
+   bottom:60px;
    height: 55px;
 }
 
@@ -244,4 +244,36 @@
 {
   display: flex;
   justify-content: flex-end;
+}
+
+
+.footer
+{
+  display:grid;
+  width:100%;
+  height:40px;
+  background-color: #0D1F2D;
+  grid-template-columns: 40% 60%;
+  margin-top:50px;
+  margin-bottom:10px;
+}
+
+.filler-area
+{
+  display: block;
+  line-height: 40px;
+  color:#A32523;
+  text-align: center;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.license-area
+{
+  display: block;
+  line-height: 40px;
+  color:white;
+  text-align:left;
+  margin-left:15%;
+  font-size: 15px;
 }
