--- a/body.css
+++ b/body.css
@@ -30,11 +30,25 @@
   display: flex;
   background-color: #F4F4F5;
   border: 1px solid #0D1F2D;
-  border-radius: 7px;
   padding: 5px 0px 5px 10px;
   width: 150px;
   font-size: 13px;
+  cursor:pointer;
+  outline: none;
 }
+
+.sort.panel>.dropdown-content
+{
+  display:none;
+  flex-direction: column;
+  position: absolute;
+  background-color: white;
+  width: 150px;
+  box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.2);
+  right: 303px;
+  top:118px;
+}
+
 
 .category.sort
 {
@@ -49,6 +63,7 @@
   align-self: center;
   margin-left: auto;
   margin-right: 10%;
+  transition-duration: 0.8s;
 }
 
 
