--- a/header.css
+++ b/header.css
@@ -19,6 +19,7 @@
   padding: 0;
   font-size: 100%;
   font-family: ArialRoundedLight;
+  user-select: none;
 }
 html {
   scroll-behavior: smooth;
@@ -155,6 +156,7 @@ img
   height: 8px;
   margin-top: 2px;
   margin-left: 4px;
+  transition-duration: 1s;
 }
 
 /* Context menu */
@@ -199,6 +201,7 @@ img
 .lgbar:hover #arrow
 {
   transform: rotate(180deg);
+  transition-duration: 0.8s;
 }
 
 .lg_button_option:hover
