--- a/header.css
+++ b/header.css
@@ -39,23 +39,16 @@ img
 /*Wrapper for header via grid */
 .wrapper
 {
-  z-index: 2;
-  position: fixed;
-  width: 100%;
-  height: 55px;
   display: grid;
   grid-template-columns: 60% 30% 10%;
   align-items: center;
-}
-.background
-{
+
   z-index: 2;
-  background-color: rgba(13, 31, 45, .92);
-  -webkit-backdrop-filter: blur(0.5em);
-  backdrop-filter: blur(.5em);
+  position: fixed;
   width: 100%;
   height: 55px;
-  position: fixed;
+  background-color: rgba(13, 31, 45, .91);
+  backdrop-filter: blur(0.6em);
 }
 
 /* Logo bar */
@@ -72,7 +65,19 @@ img
 
 /* Search bar */
 /*Whole bar  */
-.search
+.wrapper.active
+{
+  display:none;
+  align-items: center;
+}
+
+.searchbar
+{
+  display:flex;
+  align-items: center;
+}
+
+.button
 {
   background-color: white;
   border: none;
@@ -80,24 +85,23 @@ img
   margin-top: 10px;
   margin-bottom: 10px;
   font-size: 16px;
+  outline: none;
+  box-shadow: none;
 }
 
-/* Searchbar design */
 .search.input
 {
   height: 30px;
   width: 40%;
+  border-radius: 7px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   padding-left: 10px;
   padding-top: 2px;
-}
-
-.search.input:focus
-{
+  border: none;
   outline: none;
+  box-shadow: none;
 }
-
 
 /* Button design */
 .search.button
@@ -110,17 +114,9 @@ img
   background-repeat: no-repeat;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-}
-.search.button:hover
-{
   cursor:pointer;
 }
 
-.searchbar
-{
-  display:flex;
-  align-items: center;
-}
 
 /* Main language bar */
 .lgbar
@@ -162,16 +158,32 @@ img
 /* Context menu */
 .dropdown-content
 {
-  display:none;
+  display:flex;
   flex-direction: column;
   position: absolute;
-  background-color: #F4F4F5;
-  width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  right: -50px;
+  background-color: white;
+  box-shadow: 0px 8px 16px 0px rgba(1,1,7,.5);
+  right:-13px;
+  top:30px;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.2s,opacity 0.3s linear;
 }
 
 /* Context menu button option */
+.lgbar:hover .dropdown-content
+{
+  visibility: visible;
+  opacity:1;
+}
+
+.dropdown-content img:hover
+{
+  filter: brightness(1.1);
+}
+
+
+
 .lg_button_option
 {
   display: flex;
@@ -182,21 +194,14 @@ img
 {
   text-decoration: none;
   color:black;
-  padding: 5px;
 }
 
 .lg_button_option img
 {
-  height: 12px;
-  width: 20px;
-  padding-top: 8px;
-  padding-left: 5px;
+  height: 21px;
+  width: 32px;
 }
 
-.lgbar:hover .dropdown-content
-{
-  display: flex;
-}
 
 .lgbar:hover #arrow
 {
