--- a/body.css
+++ b/body.css
@@ -39,7 +39,7 @@
 
 .sort.panel>.dropdown-content
 {
-  display:none;
+  display:flex;
   flex-direction: column;
   position: absolute;
   background-color: white;
