--- a/body.css
+++ b/body.css
@@ -299,7 +299,7 @@
 {
   display:grid;
   width:100%;
-  height:40px;
+  min-height:40px;
   background-color: #0D1F2D;
   grid-template-columns: 40% 60%;
   margin-top:50px;
@@ -313,7 +313,7 @@
   color:#A32523;
   text-align: center;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .license-area
@@ -323,5 +323,5 @@
   color:white;
   text-align:left;
   margin-left:15%;
-  font-size: 15px;
+  font-size: 13px;
 }
