--- a/adaptive.css
+++ b/adaptive.css
@@ -107,23 +107,41 @@
     font-size: 13px;
   }
 
-
-
-  .main.content
-  {
-    grid-template-columns: 100%;
-  }
   .left.side
   {
     display: none;
   }
 
+
+
+
+/* Wallpaper grid */
+  .main.content
+  {
+    grid-template-columns: 100%;
+  }
   .wallpaper.grid
   {
     display: grid;
-
     width: 100%;
     grid-gap:0px;
+  }
+
+  .wallpaper
+  {
+    overflow: hidden;
+    position: relative;
+
+  }
+  .wallpaper.grid img
+  {
+    width: 100%;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: auto;
   }
 
 }
