--- a/body.css
+++ b/body.css
@@ -47,9 +47,11 @@
   position: absolute;
   background-color: white;
   width: 100%;
-  max-height: 140px;
+
   overflow: auto;
   box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.2);
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .lg_button_option>a
@@ -125,10 +127,13 @@
 {
   overflow: scroll;
   white-space: nowrap;
-  height: 350px;
   width: 140px;
   overflow-x:hidden;
   margin-bottom:40px;
+}
+.category.menu .scrollmenu
+{
+  height: 400px;
 }
 
 .scrollmenu a
@@ -210,14 +215,21 @@ a>span
   margin: 0;
   display: grid;
   width: 95%;
-  grid-gap: 12px;
+  grid-gap: 7px;
   grid-template-columns: calc(100% / 3) calc(100% / 3) calc(100% / 3);
 }
 
+.wallpaper
+{
+  position: static;
+  width: 100%;
+  height: auto;
+
+}
 .wallpaper.grid img
 {
   width: 100%;
-  height: 230px;
+  height: auto;
 }
 
 .wallpaper.grid img:hover
