--- a/body.css
+++ b/body.css
@@ -42,16 +42,17 @@
 
 .panel>.dropdown-content
 {
-  display:none;
   flex-direction: column;
   position: absolute;
   background-color: white;
   width: 100%;
-
+  z-index: 1;
   overflow: auto;
   box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.2);
   padding-left: 5px;
   padding-right: 5px;
+  opacity: 0;
+  transition: visibility 0.2s,opacity 0.3s linear;
 }
 
 .lg_button_option>a
