--- a/adaptive.css
+++ b/adaptive.css
@@ -122,7 +122,6 @@
   }
   .wallpaper.grid
   {
-    display: grid;
     width: 100%;
     grid-gap:0px;
   }
@@ -131,17 +130,18 @@
   {
     overflow: hidden;
     position: relative;
+    width: 100%;
+    /* height: 88px; */
 
   }
   .wallpaper.grid img
   {
-    width: 100%;
+    width: auto;
     position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 100%;
-    width: auto;
   }
 
 }
