--- a/adaptive.css
+++ b/adaptive.css
@@ -126,22 +126,22 @@
     grid-gap:0px;
   }
 
-  .wallpaper
+  .wallpaper.grid>.wallpaper
   {
     overflow: hidden;
     position: relative;
     width: 100%;
-    /* height: 88px; */
+    height: 88px;
+
 
   }
   .wallpaper.grid img
   {
-    width: auto;
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 100%;
+  width: auto;
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100%;
   }
-
 }
