--- a/body.css
+++ b/body.css
@@ -48,6 +48,7 @@
   width: 100%;
   z-index: 1;
   overflow: auto;
+  max-height: 200px;
   box-shadow: 0px 8px 7px 2px rgba(0,0,0,0.2);
   padding-left: 5px;
   padding-right: 5px;
@@ -131,6 +132,9 @@
   width: 140px;
   overflow-x:hidden;
   margin-bottom:40px;
+  /* For firefox */
+  scrollbar-color: #A52422 #BCBCBC;
+  scrollbar-width:thin;
 }
 .category.menu .scrollmenu
 {
@@ -180,6 +184,13 @@ a>span
 .scrollmenu::-webkit-scrollbar-thumb:active {
   background: #0D1F2D;
 }
+
+/* Scrollbar stile */
+.scrollmenu::-webkit-scrollbar {
+  width: 9px;
+}
+
+
 
 /* Navigation button up */
 .upbutton
