--- a/css/page_body.css
+++ b/css/page_body.css
@@ -5,7 +5,7 @@
 {
   display:flex;
   flex-direction: column;
-  margin-top: 25px;
+  margin-top: 35px;
 }
 
 
@@ -123,8 +123,7 @@
 
 
 
-
-/* Bottom */
+/* Bottom parts*/
 
 .bottom.side
 {
@@ -139,10 +138,18 @@
   font-size: 17pt;
 }
 
+
+.recommended.images.container
+{
+  display: grid;
+  grid-template-columns: 33.3% 33.3% 33.3%;
+}
+
 .recommended.images.container img
 {
-  width: 70%;
-  height: 200px;
+  width: 95%;
+  height: auto;
+
   margin: 0 auto;
   margin-top:20px;
 }
