--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -128,8 +128,6 @@
 
   .wallpaper.grid>.wallpaper
   {
-    overflow: hidden;
-    position: relative;
     width: 100%;
     height: 88px;
 
@@ -138,10 +136,13 @@
   .wallpaper.grid img
   {
   width: auto;
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   height: 100%;
+  transition: height 0.5s;
+  }
+
+  .wallpaper.grid img:hover
+  {
+    height: 115%;
+    width: auto;
   }
 }
